--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,18 @@
 header {
   display: flex;
   justify-content: space-between;
+  margin-block: 1.5rem;
+}
+
+.heading {
+  font-size: 1.5rem;
+  font-weight: 700;
 }
 
 footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem
+  gap: 1rem;
+  margin-block: 1rem;
 }
