--- a/src/styles/Option.css
+++ b/src/styles/Option.css
@@ -2,11 +2,17 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  font-weight: 600;
 
   border: 1px solid rgb(214, 214, 214);
   padding-block: 1rem;
   padding-inline: 0.75rem;
   border-radius: 0.5rem;
+}
+
+.option:hover {
+  border-color: var(--color-orange);
+  background-color: var(--color-light-orange);
 }
 
 .options {
