--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,17 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
+  min-height: 100vh;
 }
 
 .container {
   max-width: 60%;
   margin-inline: auto;
+}
+
+.header-container {
+  margin-inline: auto;
+  max-width: 1100px;
 }
 
 header {
@@ -23,6 +29,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
-  margin-block: 1rem;
+  gap: 2rem;
+  border-top: 1px solid black;
+  padding-block: 1.5rem;
 }
