Fix sticky footer issue

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   max-width: 1280px;
   margin: 0 auto;
   min-height: 100vh;
+  display: flex;
+  flex-flow: column;
+}
+
+main {
+  flex: 1;
+  padding-inline: 2rem;
 }
 
 .container {
@@ -23,6 +30,7 @@ header {
 .heading {
   font-size: 1.5rem;
   font-weight: 700;
+  text-align: center;
 }
 
 footer {
