--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   --color-green: rgb(0, 107, 92);
   --color-orange: rgb(255, 107, 53);
   --color-light-orange: rgb(235, 235, 235);
+  --color-border: rgb(214, 214, 214);
   --color-font: rgb(44, 62, 80);
 }
 
