Add confirm address page

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   --color-light-orange: rgb(235, 235, 235);
   --color-border: rgb(214, 214, 214);
   --color-font: rgb(44, 62, 80);
+  --color-label: rgb(102, 102, 102);
 }
 
 a {
