--- a/src/styles/Form-Group.css
+++ b/src/styles/Form-Group.css
@@ -6,6 +6,7 @@
 .form-group label {
   font-weight: 600;
   padding-block-end: 0.75rem;
+  color: var(--color-label);
 }
 
 .form-group input,
@@ -40,4 +41,15 @@
 
 #address {
   --bg-img: url('../assets/lucide/map-pin.svg');
+}
+
+
+/* Address container */
+
+.address-container {
+  margin-block: 3rem;
+}
+
+.address-container > *+* {
+  margin-block-start: 2rem;
 }
