--- a/src/index.css
+++ b/src/index.css
@@ -37,10 +37,14 @@ body {
   color: var(--color-font);
 }
 
+h1, h2, h3, p {
+  margin: 0;
+  padding: 0;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  margin: 0;
 }
 
 h1 span.green {
