--- a/src/styles/Form-Group.css
+++ b/src/styles/Form-Group.css
@@ -10,7 +10,8 @@
 }
 
 .form-group input,
-.form-group textarea {
+.form-group textarea,
+.guest-counter {
   padding: 0.875rem 0.75rem;
   border-radius: .5rem;
   border: 1px solid var(--color-border);
@@ -50,6 +51,3 @@
   margin-block: 3rem;
 }
 
-.address-container > *+* {
-  margin-block-start: 2rem;
-}
