--- a/src/styles/Form-Group.css
+++ b/src/styles/Form-Group.css
@@ -3,7 +3,8 @@
   flex-direction: column;
 }
 
-.form-group label {
+.form-group label,
+.file-upload p {
   font-weight: 600;
   padding-block-end: 0.75rem;
   color: var(--color-label);
@@ -51,3 +52,26 @@
   margin-block: 3rem;
 }
 
+
+/* Input file */
+input[type="file"] {
+  display: none;
+}
+
+.file-upload div {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.file-upload label {
+  padding: 0.875rem 0.75rem;
+  border: 1px solid var(--color-green);
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  color: var(--color-green);
+  font-weight: 600;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+}
