add moments page

--- a/src/styles/Moment.css
+++ b/src/styles/Moment.css
@@ -7,14 +7,20 @@
   border-radius: 0.5rem;
 }
 
-.moment-title {
-  font-weight: 600;
-}
-
 .moment-duration {
   color: rgb(153, 153, 153);
 }
 
-.moment-description {
-  font-size: 0.875rem;
+.hours-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.hours {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 0.75rem;
+  border: 1px solid var(--color-border);
+  border-radius: 0.5rem
 }
