--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,11 @@ footer {
 .content-container > *+* {
   margin-block-start: 2rem;
 }
+
+.txt-semibold {
+  font-weight: 600;
+}
+
+.txt-normal {
+  font-size: 0.875rem;
+}
