--- a/src/styles/Form-Group.css
+++ b/src/styles/Form-Group.css
@@ -75,3 +75,63 @@ input[type="file"] {
   border-radius: 0.5rem;
   font-size: 1rem;
 }
+
+/* Options */
+select {
+  padding: 0.875rem 0.75rem;
+  border-radius: 0.5rem;
+  border-color: var(--color-border);
+}
+
+/* Radio group */
+.checkbox-container p{
+  margin-block-end: 1rem;
+}
+
+.checkbox-group {
+  border: 1px solid var(--color-border);
+  padding: 0.875rem 0.75rem;
+  border-radius: 0.5rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+}
+
+.checkbox-group input {
+  appearance: none;
+}
+
+.checkbox-group label {
+  padding: 0.5rem 1rem;
+  border: 1px solid var(--color-border);
+  border-radius: 0.625rem;
+}
+
+/* Dialog */
+dialog {
+  max-width: 450px;
+  border: 0.2px solid;
+  border-radius: 0.5rem;
+  padding-inline: 2rem;
+}
+
+dialog > *+* {
+  margin-block-start: 1.5rem;
+}
+
+dialog .center {
+  display: block;
+  text-align: center;
+  text-decoration: underline;
+}
+
+dialog Button {
+  display: block;
+  width: 100%;
+}
+
+dialog .close {
+  display: block;
+  margin-inline-start: auto;
+  cursor: pointer;
+}
