--- a/src/styles/Form-Group.css
+++ b/src/styles/Form-Group.css
@@ -93,8 +93,8 @@ select {
   padding: 0.875rem 0.75rem;
   border-radius: 0.5rem;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
+  grid-template-columns: repeat(3, auto);
+  gap: 1.5rem;
 }
 
 .checkbox-group input {
@@ -107,9 +107,14 @@ select {
   border-radius: 0.625rem;
 }
 
+input[type="checkbox"]:checked + label {
+  border: 1px solid var(--color-orange);
+  background-color: var(--color-light-orange);
+}
+
 /* Dialog */
 dialog {
-  max-width: 450px;
+  width: 450px;
   border: 0.2px solid;
   border-radius: 0.5rem;
   padding-inline: 2rem;
