--- a/src/styles/Form-Group.css
+++ b/src/styles/Form-Group.css
@@ -109,8 +109,8 @@ select {
   border-radius: 0.625rem;
 }
 
-input[type="checkbox"]:checked + label,
-input[type="radio"]:checked + label {
+.form-group input[type="checkbox"]:checked + label,
+.form-group input[type="radio"]:checked + label {
   border: 1px solid var(--color-orange);
   background-color: var(--color-light-orange);
 }
