--- a/src/styles/Moment.css
+++ b/src/styles/Moment.css
@@ -5,6 +5,7 @@
   padding: 1rem 0.75rem;
   border: 1px solid var(--color-border);
   border-radius: 0.5rem;
+  cursor: pointer;
 }
 
 .moment-duration {
@@ -23,4 +24,8 @@
   padding: 1rem 0.75rem;
   border: 1px solid var(--color-border);
   border-radius: 0.5rem
+}
+
+.hours img {
+  cursor: pointer;
 }
